@@ -132,9 +132,9 @@
                 </child>
                 <child>
                     <object class="GtkLabel" id="password_strength">
+                        <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="xalign">0</property>
-                        <property name="label" translatable="yes">&lt;small&gt;&lt;span color="darkgreen"&gt;Strong password&lt;/span&gt;&lt;/small&gt;</property>
                         <property name="use_markup">True</property>
                     </object>
                     <packing>
@@ -146,6 +146,8 @@
                     <object class="GtkLabel" id="password_status_label">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
+                        <property name="xalign">0</property>
+                        <property name="use_markup">True</property>
                     </object>
                     <packing>
                         <property name="left_attach">1</property>
